# cargo-imagermachine

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: errors.rs  files.rs  main.rs  optimize.rs  questions.rs  splash.rs  tables.rs
src/display/: errors.rs  mod.rs  progress.rs  splash.rs  tables.rs
src/operations/: compare.rs  files.rs  mod.rs  optimize.rs  rename.rs  resize.rs  webp.rs
src/questions/: compare.rs  initial.rs  mod.rs  new_name.rs  options.rs  rename.rs  resize.rs  webp.rs
src/steps/: compare_files.rs  convert_to_webp.rs  inspect_files.rs  mod.rs  optimize_files.rs  rename_files.rs  resize_files.rs  select_files.rs  select_options.rs
src/tests/: files_test.rs  mod.rs  resize_test.rs  webp_test.rs
