[package]
name = "cargo-imagermachine"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

inquire = "0.2.1"
prettytable-rs = "^0.8"
size_format = "1.0.2"
mime = "0.3.16"
image = "0.24.1"
termion = "*"
oxipng = "5.0.1" 
turbojpeg = {version = "0.4", features = ["image"]}
indicatif = "0.17.0-rc.5"
webp = "0.2" 
