[package]
name = "cargo-imagermachine"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

inquire = "0.9.1"
prettytable-rs = "^0.10"
size_format = "1.0.2"
mime = "0.3.17"
image = "0.25.8"
termion = "^4.0.5"
oxipng = "9.1.5"
turbojpeg = { version = "^1.3.3", features = ["image"] }
indicatif = "^0.18"
webp = "^0.3.1"
